kubeServerDemo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adoniswebsocketdemo
spec:
  selector:
    app: adoniswebsocketdemo
  type: NodePort
  ports:
    - protocol: TCP
      port: 3333
      targetPort: 3333
